# timebox

./: .env.example  .gitignore  Dockerfile  README-zh_CN.md  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
client/: .gitignore  electron-builder.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/electron/main/: auth.ts  config.ts  index.ts  push.ts  record.ts  tray.ts
client/oc/: ActiveApp.m  libActiveApp.dylib
client/src/: App.tsx
client/src/assets/icons/: index.tsx
client/src/constants/: api.ts  index.ts
client/src/contexts/: ToastContext.tsx
client/src/hooks/: useAuth.ts
client/src/pages/: Home.tsx  Login.tsx  Settings.tsx
client/src/services/: authService.ts
client/src/utils/: apiClient.ts  ipc.ts
server/core-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
server/core-service/app/: main.py
server/core-service/app/api/: auth.py  image.py  items.py
server/core-service/app/core/: auth.py  config.py
server/core-service/app/db/: database.py
server/core-service/app/models/: custom_types.py  image.py  image_embedding.py  image_ocr.py  user.py
server/core-service/app/services/: ocr_client.py  ocr_processor.py  scheduler.py
server/ocr-service/: .env.example  .gitignore  Dockerfile  Dockerfile.cuda  README.md  pyproject.toml  requirements.txt
server/ocr-service/app/: main.py
server/ocr-service/app/core/: config.py
server/ocr-service/app/services/: config.yaml  ocr_config.yaml  ocr_processor.py
