[tool.poetry]
name = "core-service"
version = "0.1.0"
description = ""
authors = ["Alter <514594349@qq.com>"]
readme = "README.md"
packages = [{include = "app"}]  # 指定包含 app 目录

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.5"
itsdangerous = "^2.2.0"
pillow = "^11.0.0"
numpy = "^2.1.3"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.19"
bcrypt = "^4.2.1"
backoff = "^2.2.1"
jieba = "^0.42.1"
uvicorn = "^0.32.1"
aiohttp = "^3.11.8"

[tool.poetry.scripts]
dev = "app.main:dev"
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
