[tool.poetry]
name = "ocr-service"
version = "0.1.0"
description = ""
authors = ["Alter <514594349@qq.com>"]
readme = "README.md"
packages = [{include = "app"}]  # 指定包含 app 目录

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.5"
py-cpuinfo = "^9.0.0"
pillow = "^11.0.0"
numpy = "^2.1.3"
pydantic-settings = "^2.6.1"
ocrmac = {version = "^1.0.0", markers = "sys_platform == 'darwin'"}
python-multipart = "^0.0.19"
uvicorn = "^0.32.1"
rapidocr-onnxruntime = "^1.4.0"
rapidocr-paddle = "^1.4.0"

[tool.poetry.scripts]
dev = "app.main:dev"
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
